# forest-AI

./: ForestAI_Whitepaper_Version_Alpha.md  QUICKSTART.md  README.md
cli/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
cli/src/: client.ts  index.ts  program.ts  utils.ts  version.ts
cli/src/abi/: l2resolver.ts
cli/src/config/: config.ts  index.ts  path.ts  spec.ts
cli/src/utils/: address.ts
cli/src/validation/: account.ts  file.ts  json.ts  (+2 more)
contracts/: .env.example  .gitignore  CHANGELOG.md  README.md
contracts/script/: DeployForestContracts.sol  MinimalAnvilTestDeployment.sol  ModifyContractState.sol  RegisterProtocolAndBaseActors.sol  RegisterProtocolBaseActorsAndReportRanks.sol
contracts/src/: ForestCommon.sol  ForestProtocol.sol  ForestRegistry.sol  ForestSlasher.sol  ForestToken.sol
contracts/test/: ForestProtocol.t.sol  ForestRegistry.t.sol  ForestSlasher.t.sol  ForestToken.t.sol
contracts/testing_scripts/: emissions_commands_test_script.sh
contracts/utils/: ForestProtocol.abi  ForestRegistry.abi  ForestSlasher.abi  ForestToken.abi
docs/: OVERVIEW.md
forest-sdk-rs/: README.md
proposed-protocols/: ComputingResourceProtocol_spec.md  CryptoAnalysis_spec.md  CulturalOriginAnalysis_spec.md  GPUComputeProviders_spec.md  IPFSPinning_spec.md  MedicalQA_spec.md  SQLonPublicData__SpaceAndTime_spec.md  ServerlessGPULilypad_spec.md  SybilIdentification_spec.md  TextToImageGeneric_spec.md
sdk-js/: README.md
sdk-js/src/: throttle.ts
sdk/rs-sdk/: Cargo.toml
sdk/rs-sdk/src/: constants.rs  types.rs
sdk/rs-sdk/src/validation/: mod.rs
sdk/sdk-rs/: README.md
sdk/sdk-ts/: .npmignore  package-lock.json  package.json  tsup.config.ts
(+129 files in other folders)
