[package]
name = "forest-sdk-rs"
version = "0.1.0"
edition = "2021"
authors = ["Forest Protocols Development Team"]
description = "Forest Protocols SDK - Rust Implementation"
license = "MIT"
repository = "https://github.com/Forest-Protocols/forest-protocols"
keywords = ["forest", "forest-protocols", "cloud", "web3", "blockchain", "sdk"]

[dependencies]
# Web3 and Blockchain
ethers = { version = "2.0", features = ["ws", "rustls"] }
alloy-primitives = "0.7"
alloy-rpc-types = "0.7"
secp256k1 = "0.28"
k256 = { version = "0.13", features = ["ecdsa"] }
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-ws-server = "18.0"
jsonrpc-pubsub = "18.0"
jsonrpc-derive = "18.0"

# Serialization and Validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
zod = "0.1"

# Authentication and Security
jsonwebtoken = "9.2"
base64 = "0.21"
ring = "0.17"
ed25519-dalek = "2.0"
rand = "0.8"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP and Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Testing
tokio-test = "0.4"
mockall = "0.12"

# Multiformats and CID
multiformats = "0.1"
cid = "0.8"
multibase = "0.9"
multihash = "0.18"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12" 